--- a/index.html
+++ b/index.html
@@ -3,9 +3,211 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap Portfolio</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="icon" href="./images/favicon.png">
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
-    
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+          <img src="./images/bootstrap-logo.svg" alt="" width="30" height="24">
+          ootstrap Portfolio 
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#about-me">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacts">Contacts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Coming Soon</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="section ps-section text-center border-bottom">
+    <h1 class="section-header display-3 fw-bold section-header-white" id="about-me">About Me</h1>
+    <h1 class="display-6 fw-bold section-header-white">Ricardo Oliveira</h1>
+    <div class="h-100 about-me col-lg-6 col-md-8 col-sm-12 mx-auto">
+        <img class="avatar" src="./images/avatar.jpg" alt="Simpsons style avatar" height="280">
+        <p class="ps-desc lead mt-5">I’m a recent Computer Science graduate with a passion for web technologies and software engineering. I have a strong
+            understanding of HTML, CSS, and JavaScript, and I am proficient in Python and Java. I have proven work experience as a
+            front-end developer and I am also experienced in using version control systems and agile development methodologies. I
+            am a highly motivated and results-oriented individual, and I am confident that I can make a significant contribution to
+            your team.
+        </p>
+    </div>
+  </div>
+  <div class="section white-section px-4 pt-3 text-center border-bottom">
+    <h1 class="section-header fw-bold display-3" id="work">Work</h1>
+    <div class="container-fluid mx-auto">
+      <div class="row card-group">
+        <a class="card wrk-card pt-3" href="https://github.com/roliveira527/fyp-AVAS-project" target="_blank">
+          <img class="card-img-top mx-auto my-auto" src="./images/03-car.jpg" alt="electric vehicle driving around windy roads" height="300">
+          <div class="card-body">
+            <h5 class="card-title">Accoustic Vehicle Alerting System</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </a>
+        <a class="card wrk-card pt-3" href="https://github.com/roliveira527/fine-dining-project" target="_blank">
+          <img class="card-img-top mx-auto my-auto" src="./images/03-restaurant.jpg" alt="photo of dining area" height="300">
+          <div class="card-body">
+            <h5 class="card-title">Fine Dining Front-End</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </a>
+        <a class="card wrk-card pt-3" href="https://github.com/roliveira527/youtube-clone-project" target="_blank">
+          <img class="card-img-top mx-auto my-auto" src="./images/03-youtube-clone.jpg" alt="video thumbnails in 3D plane" height="300">
+          <div class="card-body">
+            <h5 class="card-title">YouTube Clone</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </a>
+      </div>
+      <div class="row card-group mt-2">
+        <a class="card wrk-card pt-3" href="https://roliveira527.github.io/uob_mod1_challenge/" target="_blank">
+          <img class="card-img-top mx-auto my-auto" src="./images/logo-birmingham.png" alt="University of Birmingham logo">
+          <div class="card-body">
+            <h5 class="card-title">Module 1 Challenge</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </a>
+        <a class="card wrk-card pt-3" href="https://roliveira527.github.io/uob_mod2_challenge_roliveira527/" target="_blank">
+          <img class="card-img-top mx-auto my-auto" src="./images/logo-birmingham.png" alt="University of Birmingham logo">
+          <div class="card-body">
+            <h5 class="card-title">Module 2 Challenge</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </a>
+        <a class="card wrk-card pt-3 disabled">
+          <img class="card-img-top mx-auto my-auto" src="./images/03-led.jpg" alt="LED wall">
+          <div class="card-body">
+            <h5 class="card-title">Coming Soon..</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="section skl-section px-4 pt-3 text-center border-bottom">
+    <h1 class="section-header fw-bold display-3 section-header-white" id="skills">Skills</h1>
+    <div class="container-fluid mx-auto">
+      <div class="row card-group mt-2">
+        <div class="card pt-3">
+          <img class="card-img-top skl-img mx-auto my-auto" src="./images/logo-html.png" alt="HTML 5 logo">
+          <div class="card-body">
+            <h5 class="card-title">HTML</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+        <div class="card pt-3">
+          <img class="card-img-top skl-img mx-auto my-auto" src="./images/logo-css.png" alt="CSS 3 logo">
+          <div class="card-body">
+            <h5 class="card-title">CSS</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card pt-3">
+          <img class="card-img-top skl-img mx-auto my-auto" src="./images/logo-js.png" alt="JavaScript logo">
+          <div class="card-body">
+            <h5 class="card-title">JavaScript</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row card-group mt-2">
+        <div class="card pt-3">
+          <img class="card-img-top skl-img mx-auto my-auto" src="./images/bootstrap-logo.svg" alt="Bootstrap logo">
+          <div class="card-body">
+            <h5 class="card-title">Bootstrap</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+        <div class="card pt-3">
+          <img class="card-img-top skl-img mx-auto my-auto" src="./images/logo-python.png" alt="Python logo">
+          <div class="card-body">
+            <h5 class="card-title">Python</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card pt-3">
+          <img class="card-img-top skl-img mx-auto my-auto" src="./images/logo-java.png" alt="Java logo">
+          <div class="card-body">
+            <h5 class="card-title">Java</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section contact-section white-section px-4 pt-3 text-center border-bottom">
+    <h1 class="section-header fw-bold display-3" id="contacts">Contacts</h1>
+    <div class="container-fluid mx-auto">
+      <div class="row card-group mt-2">
+        <div class="card pt-3">
+          <img class="card-img-top skl-img mx-auto my-auto" src="./images/icon-mobile.png" alt="smartphone icon">
+          <div class="card-body">
+            <h5 class="card-title">Mobile</h5>
+            <p class="card-text">+44 (0) 2470 000000</p>
+          </div>
+        </div>
+        <div class="card pt-3">
+          <img class="card-img-top skl-img mx-auto my-auto" src="./images/icon-email.png" alt="email envelope icon">
+          <div class="card-body">
+            <h5 class="card-title">E-mail</h5>
+            <p class="card-text">placeholder.mail@fastmail.com</p>
+          </div>
+        </div>
+        <div class="card pt-3">
+          <img class="card-img-top skl-img mx-auto my-auto" src="./images/logo-github.png" alt="GitHub logo">
+          <div class="card-body">
+            <h5 class="card-title">GitHub</h5>
+            <p class="card-text">https://github.com/roliveira527</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="card">
+    <div class="footer-header card-header">
+      Copyright: Ricardo Oliveira, 2023
+    </div>
+    <div class="footer-content card-body">
+      <h5 class="card-title">Links and Socials</h5>
+      <div class="d-flex justify-content-around">
+        <a href="https://github.com" target="_blank" class="btn btn-shadow btn-outline-dark my-4">GitHub</a>
+        <a href="https://linkedin.com" target="_blank" class="btn btn-shadow btn-outline-dark my-4">LinkedIn</a>
+        <a href="https://twitter.com" target="_blank" class="btn btn-shadow btn-outline-dark my-4">Twitter</a>
+        <a href="https://spotify.com"  target="_blank"class="btn btn-shadow btn-outline-dark my-4">Spotify</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
